--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "~4.1.0@stable"
     },
     "autoload":{
              "psr-4": {
