--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1.0@stable"
+        "phpunit/phpunit": "~4.1.0@stable",
+        "raveren/kint": "^1.0"
     },
     "autoload":{
              "psr-4": {
